--- a/views/config/intro.ejs
+++ b/views/config/intro.ejs
@@ -1,9 +1,25 @@
-<div class="introImgDiv_T"> <img class="introImg_head" src="/images/logoW2.png"></div>
+<div class="introImgDiv_T">
+    
+       <h1>Marketing for your Small Business Social Media</h1>
+       <img class="introImg_head" src="/images/logoW2.png">
+       <p>We know what it is like starting your own business. We did it too!</p>
+       <p> We make it easy and affordable for you to take the first step into building your dreams and simplifying the most daunting part of getting your business out there for people to see. </p>
+       
+    </div>
 <div class="landingPage">
-
-<div style="margin-bottom:12%" class="eventBody">
+    <div style="margin-bottom:12%" class="eventBody">  
     <h1 class="h1Span">Web Applications</h1>
-    <div class="introImgDiv_L"> <img class="introImg" src="/images/webapps.png"></div>
+    <div class="innerDetails">
+        <ul>
+        <li>deet1</li>
+        <li>deet2</li>
+        <li>deet3</li>
+    </ul>
+</div>
+    <div class="introImgDiv_L">
+     
+         <img  class="introImg" src="/images/webapps.png">
+        </div>
     </div>
 <div style="margin-bottom:12%" class="eventBody">
     <h1 class="h1Span">Data and Analytics</h1>
