--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,22 +15,22 @@
                   
 <div class="eventBody_about">
     <div class="eventBody">
-            <p> <span class="alert"> NoCo Metalworkz</span> operates as a small specialized team in Greeley, CO</p>
+            <p> <span class="alert"> W2 Marketing</span> operates as a small specialized team in Greeley, CO</p>
    <p>We Offer:</p>
               <ul>
-<li>Advanced Fabrication</li>
-<li>Fencing & Automatic Gates</li>
-<li>Industrial Stairways & Catwalk Assembly</li>
-<li>Automotive Parts & Accessories</li>
-<li>Custom Onsite metalworkz</li>
-<li>delivered machine parks & custom workz</li>
+                <li>Social media account creation and management (Facebook, Instagram, Twitter, etc.)</li>
+                <li>Content creation and curation</li>
+                <li>Social media advertising (Facebook Ads, Instagram Ads, etc.)</li>
+                <li>Influencer marketing</li>
+                <li>Social media analytics and reporting</li>
+                <li>Community management and engagement</li>
+                <li>Reputation management</li>
+                <li>Social media strategy development</li>
 
 <p></p>
 </ul>
             </div>
-            <div class="imgSubDiv">
-                <img class="imgSub" src="/images/laser.png">
-            </div>
+       
         </div>
             </div>
             <br>
@@ -42,7 +42,7 @@
        
                 <div class="landingPage0">
             <a href="/market">     <div class="navBox">
-                marketplace
+                services
             </div></a>
         </div>
 <div class="landingPage0">
