--- a/views/config/header.ejs
+++ b/views/config/header.ejs
@@ -11,7 +11,7 @@
 <div id="menuPage">
     <div class="menuContent">
         <p><a href="/">Home</a></p>
-        <p><a href="/market">Market</a></p>
+        <p><a href="/market">Services</a></p>
         <p><a href="/register">Contact</a></p>
     <% if (typeof user == 'object' && user) { %>
         <p> <a onclick="loading('logging out')" href="/auth/logout">Logout</a></p>
