--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -194,21 +194,19 @@
 
 @font-face {
   font-family: "combo";
-  src: url("../fonts/Combo/Combo-Regular.ttf");
-  src: url("../fonts/Combo/Combo-Regular.ttf");
+  src: url("../fonts/Grotesque/DarkerGrotesque-Light.ttf");
 }
 @font-face {
   font-family: "kScript";
-  src: url("../fonts/Kaushan_Script/KaushanScript-Regular.ttf");
+  src: url("../fonts/Vujahday/VujahdayScript-Regular.ttf");
 }
 @font-face {
   font-family: "righteous";
-  src: url("../fonts/Righteous/Righteous-Regular.ttf");
+  src: url("../fonts/Combo/Combo-Regular.ttf");
 }
 body {
   margin: 0;
   padding: 0;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: black;
   color: white;
 }
@@ -231,6 +229,7 @@ body {
 }
 
 .introImgDiv {
+  z-index: 2;
   margin: 0 0 15% 0;
   transform-style: preserve-3d;
   transition-duration: 0.6s;
@@ -252,10 +251,10 @@ body {
 
 .introImg {
   width: 100%;
+  z-index: 2;
 }
 .introImg_head {
   width: 100%;
-  margin-top: 20vh;
   margin-bottom: 60vh;
 }
 @media screen and (min-width: 900px) {
@@ -1178,6 +1177,11 @@ img.mainImg {
     background-position-y: top;
   }
 }
+.innerDetails {
+  position: absolute;
+  z-index: 0;
+}
+
 .menu {
   position: fixed;
   min-width: 100vw;
