--- a/views/productID.ejs
+++ b/views/productID.ejs
@@ -25,21 +25,11 @@
         <div class="invPrice"><%= data.price%></div> 
         <div >
             <h3><%= data.details%></h3>
-            <h3>Orders are shipped within 4 business days of order being placed. Metal art design will be NON-painted raw steel</h3>
-            <h3> Not the right size for your application? Custom Colors, designs, sizes, and modifications available, <a href="/register"><span class="alert"> Contact Us </span></a>for a quote!!!
+            <h3>Social Media Services initiate upon payment.</h3>
+            <h3>Is there a service you need custom? <a href="/register"><span class="alert"> Contact Us </span></a>for a quote!!!
             </h3>
             <br>
-            <div class="eventBody">
-            <h3>Sizing</h3>
-            <%if(typeof data.shipping == "object"&& data.shipping){%>
-            <h3>Height: <%= data.shipping.height%> inches</h3>
-            <h3>Width: <%= data.shipping.width%> inches</h3>
-            <h3>Depth: <%= data.shipping.depth%> inches</h3>
-            <h3>Weight: <%= data.shipping.weight%></h3>
-            <%}else{%>
-                <h3>No sizing for this product available</h3>
-                <%}%>
-        </div>
+     
         </div> 
         
     </div>
