--- a/views/config/baseScripts.ejs
+++ b/views/config/baseScripts.ejs
@@ -3,3 +3,4 @@
 <script src="/javascripts/bodyLoader.js"></script>
 <script src="/javascripts/loadScreen.js"></script>
 <script src="/javascripts/logoSlide.js"></script>
+<!--script src="/javascripts/imageRotate.js"></script-->
