--- a/views/service-agreements.ejs
+++ b/views/service-agreements.ejs
@@ -11,7 +11,7 @@
     <%- include('config/header.ejs')%>
     <body>
     <div class="eventBody">
-<h1>Nocometalwowrkz LLC Web Aplication Service Agreement</h1>
+<h1>W2 Marketing LLC Web Application Service Agreement</h1>
 <ul>
 <li>We will not share your information with anyone</li>
 <li>We use Google Profile Data to create a dynamic User and Client experience</li>
