--- a/views/config/intro.ejs
+++ b/views/config/intro.ejs
@@ -1,47 +1,18 @@
-<div class="introImgDiv_T">
-    
-       <h1>Marketing for your Small Business Social Media</h1>
-       <img class="introImg_head" src="/images/logoW2.png">
-       <p>We know what it is like starting your own business. We did it too!</p>
-       <p> We make it easy and affordable for you to take the first step into building your dreams and simplifying the most daunting part of getting your business out there for people to see. </p>
-       
-    </div>
+<div class="introImgDiv_T">    
+        <img class="introImg_head" src="/images/logoW2.png">
+       <h1 class="introType">Marketing for your Small Business Social Media</h1>
+       <h2>We know what it is like starting your own business. We did it too!</h2>
+       <h2> We make it easy and affordable for you to take the first step into building your dreams and simplifying the most daunting part of getting your business out there for people to see. </h2>
+</div>
+  
 <div class="landingPage">
-    <div style="margin-bottom:12%" class="eventBody">  
-    <h1 class="h1Span">Web Applications</h1>
-    <div class="innerDetails">
-        <ul>
-        <li>deet1</li>
-        <li>deet2</li>
-        <li>deet3</li>
-    </ul>
-</div>
-    <div class="introImgDiv_L">
-     
-         <img  class="introImg" src="/images/webapps.png">
+<%for(let i=0;i<intro.length;i++){%>
+        <div style="margin-bottom:12%" class="eventBody">  
+        <h1 class="h1Span"><%=intro[i].introHeader%></h1>
+        <div class="introImgDiv_L">     
+            <div class="innerDetails"><%=intro[i].introDetails%></div>
+            <div><img class="introImg" src="/<%=intro[i].imgName%>"></div>
+            </div>
         </div>
+        <%}%>
     </div>
-<div style="margin-bottom:12%" class="eventBody">
-    <h1 class="h1Span">Data and Analytics</h1>
-    <div class="introImgDiv_M" > <img class="introImg" src="/images/analytics.png"></div>
-    </div>
-<div style="margin-bottom:12%" class="eventBody">
-    <h1 class="h1Span">Bots and Auto Moderators</h1>
-    <div class="introImgDiv_M" > <img class="introImg" src="/images/bots.png"></div>
-    </div>
-<div style="margin-bottom:12%" class="eventBody">
-    <h1 class="h1Span">API Development </h1>
-    <div class="introImgDiv_M" > <img class="introImg" src="/images/api.png"></div>
-    </div>
-<div style="margin-bottom:12%" class="eventBody">
-    <h1 class="h1Span">Website Development</h1>
-    <div class="introImgDiv_R"> <img class="introImg" src="/images/webdev.png"></div>
-    </div>
-</div>
-<!--div class="intro">
-<div class="introHead">
-    <span class="introType"></span>
-</div>
-<div class="introFoot"></div>
-
-</div-->
