major mongoApp dependencey update

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -138,6 +138,8 @@
   </div>
 <div class="evnetBody"><h1 class="h1Span"><a href="/options">Options</a></h1></div>
 <div class="evnetBody"><h1 class="h1Span"><a href="/inventory">Inventory</a></h1></div>
+<div class="evnetBody"><h1 class="h1Span"><a href="/services">Services</a></h1></div>
+<div class="evnetBody"><h1 class="h1Span"><a href="/accounts">Accounts</a></h1></div>
 
 
 </div>
