--- a/views/market.ejs
+++ b/views/market.ejs
@@ -2,19 +2,19 @@
 <html>
     <%- include('config/head.ejs')%>
 <body onload="bodyLoader()">      
-    <%- include('partials/cart.ejs')%>
+   
     <%- include('config/bkgdImg.ejs')%>
     <%- include('config/header.ejs')%>
             <%- include('config/loadScreen.ejs')%>            
     <div class="mainStyle">       
         <div class="eventBody">
-            <h1 class="h1Span"><%=title%></h1>                
+            <h1 class="h1Span">Services</h1>                
             <form action="/marketOp">
                 <div class="marketFilter">
                     <select onchange="loading('filtering inventory'),submit()" name="catID"   id="">
                     <option >Filter by Category</option>
-                    <% for(var i=1;i<catagory.length;i++){%>
-                     <option value="<%= catagory[i].catName%>"><%= catagory[i].catName%></option>
+                    <% for(var i=0;i<data[2].length;i++){%>
+                     <option value="<%= data[2][i].catName%>"><%= data[2][i].catName%></option>
                      <%}%>
                    </select>
                 </div>
@@ -23,15 +23,15 @@
         <div class="eventBody">
             <div class="eventBody">
                 <div class="invGrid">
-                    <% for(var i=0;i<data.length;i++){%>
+                    <% for(var i=0;i<data[1].length;i++){%>
                         <div class="gridContain">
                             <div>
-                                <h2><%=data[i].name%></h2>
-                                <h3>$<%=data[i].price%>.00</h3>
+                                <h2><%=data[1][i].name%></h2>
+                                <h3>$<%=data[1][i].price%>.00</h3>
                             </div>
                             <div class="imgCont">
-                                   <a onclick="loading('getting product details')" href="/productID/<%= data[i]._id%>"> 
-                                 <img class="invImg" src=" <%= data[i].imgName%>" alt="">
+                                   <a onclick="loading('getting product details')" href="/productID/<%= data[1][i]._id%>"> 
+                                 <img class="invImg" src=" <%= data[1][i].imgName%>" alt="">
                                 </a>
                                </div>
                         </div>                
