--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,25 +9,28 @@
             <%- include('config/bkgdImg.ejs')%>            
             <%- include('config/loadScreen.ejs')%>
             <%- include('config/header.ejs')%>
-            <%- include('partials/cart.ejs')%>
+            
     <%- include('config/intro.ejs')%> 
     <div class="eventBody">
        <div class="indexSpacer"></div>
         <h1 class="h1Span">W2 Marketing Services</h1>
+      
         <div class="invGrid">
-            <% for(var i=0;i<data.length;i++){%>
+            <% for(var i=0;i<data[1].length;i++){%>
                 <div class="gridContain">
                     <div>
-                        <h2><%=data[i].name%></h2>
-                        <h3>$<%=data[i].price%>.00</h3>
+                        <h2><%=data[1][i].name%></h2>
+                        <h3>$<%=data[1][i].price%>.00</h3>
                     </div>
                     <div class="imgCont">
-                           <a onclick="loading('getting product details')" href="/productID/<%= data[i]._id%>"> 
-                         <img class="invImg" src=" <%= data[i].imgName%>" alt="">
+                           <a onclick="loading('getting product details')" href="/productID/<%= data[1][i]._id%>"> 
+                         <img class="invImg" src=" <%= data[1][i].imgName%>" alt="">
                         </a>
                        </div>
                 </div>                
                  <%}%>
+
+               
             </div>
             <div class="indexSpacerBottom"></div>
         </div>        
@@ -51,27 +54,27 @@
 </div>
 <div class="midRight">
     
-    <%- include('config/icons/icon_set.ejs')%>
 </div>
 </div>
 
 <h1 class="h1Span">Latest Developments</h1>
-<div class="landingPage">   
-    <% for(var i=0;i<blogs.length;i++){%>
-        <div class="eventBody">
-                    <h1 maxlength="20"><%= blogs[i].bTitle%></h1>
-                    <h2 maxlength="20"><%= blogs[i].bSubtitle%></h2>
-                    <div style="background-image:url('<%= blogs[i].imgName%>');" class="imgBox"></div>
-                    <p><%= blogs[i].bDetails%></p>
-                </div>
-                    <%}%>
+<div class="landingPage">  
+        <% for(var i=0;i<data[0].length;i++){%>
+            <div class="eventBody">
+                <h1 maxlength="20"><%= data[0][i].bTitle%></h1>
+                <h2 maxlength="20"><%= data[0][i].bSubtitle%></h2>
+                <div style="background-image:url('<%= data[0][i].imgName%>');" class="imgBox"></div>
+                <p><%= data[0][i].bDetails%></p>
+            </div>
+            <%}%>
         </div>
+   
         <div class="indexSpacerBottom"></div>
-      <%- include('config/footer.ejs')%>
-
+        <%- include('config/footer.ejs')%>
+        
     </div>
-
-
-<%- include('./config/baseScripts.ejs')%>
+    
+    
+    <%- include('./config/baseScripts.ejs')%>
 </body>
  </html>
