--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -7,24 +7,31 @@
 <meta name="google-site-verification" content="Pvp74_YXTw6uwsBP-6pTFmbwnjXD7_zXP-WUG4FpWU8" />
 <!--end-->
 </head>
-<body>
-   
+<body onload="minView(1)">   
+  <%- include('config/bkgdImg.ejs')%>            
+  <%- include('config/loadScreen.ejs')%>
+  <%- include('config/header.ejs')%>
   <div id="backgroundFX">    
    
       <h1 class="h1Span">ACCOUNTS</h1>
-    <div class="landingPage">
-    <%for(let i =0;i<data[0].length;i++){%>
-    
-      <div class="eventBody">
-       <span class="alert"><h2> <%= data[0][i].companyName%></h2></span><br>
-    <%= data[0][i].contactName%><br>
-    <%= data[0][i].email%><br>
-    <%= data[0][i].phoneNumber%><br>
-    <%= data[0][i].businessAddress%>
-    </div>
-    <%}%>
-
-    <div class="eventBody" id="admin0">
+      <button onclick="switchView(pageGrid)">table</button>
+      <button onclick="switchView(pageCard)">card</button>
+      <button onclick="switchView(pageNav)">nav</button>
+      <button onclick="switchView(pageAdd)">add</button>
+    <div  id="pageCard" class="landingPage">
+      <%for(let i =0;i<data[0].length;i++){%>
+        
+        <div class="eventBody">
+          <span class="alert"><h2> <%= data[0][i].companyName%></h2></span><br>
+          <%= data[0][i].contactName%><br>
+          <%= data[0][i].email%><br>
+          <%= data[0][i].phoneNumber%><br>
+          <%= data[0][i].businessAddress%>
+        </div>
+        <%}%>
+      </div>
+        
+    <div class="eventBody" id="pageAdd">
       <h1>Add Client</h1>
       <form action="/postToClients" method="post">
         <label for="collection-ext-name">collection Ext Name:</label>
@@ -55,15 +62,43 @@
       </form>
     </div>
 
-    <div>
+    <div id="pageNav">
       <span class="alert"><h2>navigation</h2>
       </span>
       <%- include('./config/midbarAdmin.ejs')%>
     </div>
 
-
-    </div>
-    <div class="indexSpacerBottom"></div>
+    <div id="pageGrid" class="eventBody">
+      <table >
+        <thead>
+          <tr>
+            <th>Contact Name</th>
+            <th>Email</th>
+            <th>Company Name</th>
+            <th>Phone Number</th>
+            <th style="text-align: center;">Business Address</th>
+           
+            <th>Edit</th>
+            <th>Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for(let i=0;i<data[0].length;i++){%>
+          <tr>
+            <td><%=data[0][i].contactName%></td>
+            <td><%=data[0][i].email%></td>
+            <td><%=data[0][i].companyName%></td>
+            <td><%=data[0][i].phoneNumber%></td>
+            <td><%=data[0][i].businessAddress%></td>
+         
+            <td><a href="/editClient/<%=data[0][i]._id%>"><span class="alert"> Edit</span></a></td>
+            <td><a href="/deleteClient/<%=data[0][i]._id%>"><span class="alert"> Delete</span></a></td>
+          </tr>
+      <%}%>
+          <!-- Add more rows as needed -->
+        </tbody>
+      </table>
+        </div>
 
     
    
@@ -80,5 +115,25 @@
   
 </div>
 
-
+<script>
+  const pageCard= document.getElementById('pageCard')
+  const pageGrid= document.getElementById('pageGrid')
+  const pageNav= document.getElementById('pageNav')
+  const pageAdd= document.getElementById('pageAdd')
+  function minView(zz){
+    const viewArray = [pageCard,pageAdd,pageGrid,pageNav]
+    console.log(viewArray)
+    for(let i=zz;i<viewArray.length;i++){
+    viewArray[i].style.display = "none"
+  }
+  }
+  function switchView(view){
+  minView(0)
+  if(view==pageCard){
+    view.style.display="grid"
+  }else{
+  view.style.display="block"
+  }}
+  
+  </script>
 </body> </html>
