--- a/views/services.ejs
+++ b/views/services.ejs
@@ -7,18 +7,18 @@
 <meta name="google-site-verification" content="Pvp74_YXTw6uwsBP-6pTFmbwnjXD7_zXP-WUG4FpWU8" />
 <!--end-->
 </head>
-<body onload="minView()">   
+<body onload="minView(1)">   
   <%- include('config/bkgdImg.ejs')%>            
   <%- include('config/loadScreen.ejs')%>
   <%- include('config/header.ejs')%>
   <div id="backgroundFX">      
       <h1 class="h1Span"> W2 SERVICES</h1>
-      <button onclick="switchView(svcGrid)">grid</button>
-      <button onclick="switchView(svcCard)">card</button>
-      <button onclick="switchView(svcNav)">nav</button>
-      <button onclick="switchView(svcAdd)">add</button>
+      <button onclick="switchView(pageGrid)">table</button>
+      <button onclick="switchView(pageCard)">card</button>
+      <button onclick="switchView(pageNav)">nav</button>
+      <button onclick="switchView(pageAdd)">add</button>
 
-    <div id="svcCard" class="landingPage">
+    <div id="pageCard" class="landingPage">
     <%for(let i =0;i<data[0].length;i++){%>    
       <div class="eventBody">
         <span class="alert"><h2> <%= data[0][i].serviceName%></h2></span><br>
@@ -27,22 +27,17 @@
          <%= data[0][i].serviceDetail%><br>
         </p>
         <h1 class="span"><%= data[0][i].cost%></h1><%= data[0][i].terms%><br>
-        
-        <form action="/removeService">
-          <input type="text" id="collectionExtName" name="collectionExtName" value="_services" hidden required>
-          <input type="text" name="serviceId" hidden value="<%=data[0][i]._id%>">
-          <button type="submit">remove</button>
-        </form>
+              
       </div>
       <%}%>
       
     </div>
-    <div id="svcNav">
+    <div id="pageNav">
     
       <%- include('./config/midbarAdmin.ejs')%>
     </div>
     
-    <div class="eventBody" id="svcAdd">
+    <div class="eventBody" id="pageAdd">
       <h1>Add Service</h1>
       <form action="/postToServices" method="post">
         <label for="collection-ext-name">collection Ext Name:</label>
@@ -76,16 +71,16 @@
  
 
 
-    <div id="svcGrid" class="eventBody">
-      <table>
+    <div id="pageGrid" class="eventBody">
+      <table >
         <thead>
           <tr>
             <th>Service Name</th>
             <th>Cost</th>
             <th>Terms</th>
             <th>Service Category</th>
-            <th>Service Detail</th>
-            <th>Collection Ext. Name</th>
+            <th style="text-align: center;">Service Detail</th>
+           
             <th>Edit</th>
             <th>Delete</th>
           </tr>
@@ -99,8 +94,8 @@
             <td><%=data[0][i].serviceCategory%></td>
             <td><%=data[0][i].serviceDetail%></td>
          
-            <td><a href="#">Edit</a></td>
-            <td><a href="#">Delete</a></td>
+            <td><a href="/editService/<%=data[0][i]._id%>"><span class="alert"> Edit</span></a></td>
+            <td><a href="/deleteService/<%=data[0][i]._id%>"><span class="alert"> Delete</span></a></td>
           </tr>
       <%}%>
           <!-- Add more rows as needed -->
@@ -122,20 +117,20 @@
   
 </div>
 <script>
-const svcCard= document.getElementById('svcCard')
-const svcGrid= document.getElementById('svcGrid')
-const svcNav= document.getElementById('svcNav')
-const svcAdd= document.getElementById('svcAdd')
-function minView(){
-  const viewArray = [svcAdd,svcCard,svcGrid,svcNav]
+const pageCard= document.getElementById('pageCard')
+const pageGrid= document.getElementById('pageGrid')
+const pageNav= document.getElementById('pageNav')
+const pageAdd= document.getElementById('pageAdd')
+function minView(zz){
+  const viewArray = [pageCard,pageAdd,pageGrid,pageNav]
   console.log(viewArray)
-  for(let i=0;i<viewArray.length;i++){
+  for(let i=zz;i<viewArray.length;i++){
   viewArray[i].style.display = "none"
 }
 }
 function switchView(view){
-minView()
-if(view==svcCard){
+minView(0)
+if(view==pageCard){
   view.style.display="grid"
 }else{
 view.style.display="block"
