--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -14,13 +14,16 @@
   <div id="backgroundFX">    
    
       <h1 class="h1Span">ACCOUNTS</h1>
-      <button onclick="switchView(pageGrid)">table</button>
-      <button onclick="switchView(pageCard)">card</button>
-      <button onclick="switchView(pageNav)">nav</button>
+      <button style="background-color:rgb(33, 133, 133)" onclick="switchView(pageGrid)">table</button>
+      <button style="background-color:rgb(33, 133, 133)" onclick="switchView(pageCard)">card</button>
+      <button hidden onclick="switchView(pageNav)">nav</button>
+      <a href="/services"><button>services</button></a>
+      <a href="/admin"><button>admin</button></a>
       <button onclick="switchView(pageAdd)">add</button>
+      <a href="/invoice"><button>invoice</button></a>
     <div  id="pageCard" class="landingPage">
       <%for(let i =0;i<data[0].length;i++){%>
-        
+        <a href="/editor/?_id=<%=data[0][i]._id%>&ext=_clients">
         <div class="eventBody">
           <span class="alert"><h2> <%= data[0][i].companyName%></h2></span><br>
           <%= data[0][i].contactName%><br>
@@ -28,6 +31,7 @@
           <%= data[0][i].phoneNumber%><br>
           <%= data[0][i].businessAddress%>
         </div>
+      </a>
         <%}%>
       </div>
         
@@ -91,8 +95,8 @@
             <td><%=data[0][i].phoneNumber%></td>
             <td><%=data[0][i].businessAddress%></td>
          
-            <td><a href="/editClient/<%=data[0][i]._id%>"><span class="alert"> Edit</span></a></td>
-            <td><a href="/deleteClient/<%=data[0][i]._id%>"><span class="alert"> Delete</span></a></td>
+            <td><a href="/editor/?_id=<%=data[0][i]._id%>&ext=_clients"><span class="alert"> Edit</span></a></td>
+           
           </tr>
       <%}%>
           <!-- Add more rows as needed -->
