--- a/views/config/head.ejs
+++ b/views/config/head.ejs
@@ -1,6 +1,6 @@
 <head>
     <script>0</script>
-    <link rel="shortcut icon" type="image/png"href="images/logoW2.png">
+    <link rel="shortcut icon" type="image/png"href="/images/logoW2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/stylesheets/style.css">
 
