--- a/views/market.ejs
+++ b/views/market.ejs
@@ -26,8 +26,9 @@
                     <% for(var i=0;i<data[1].length;i++){%>
                         <div class="gridContain">
                             <div>
-                                <h2><%=data[1][i].name%></h2>
-                                <h3>$<%=data[1][i].price%>.00</h3>
+                                <h2><%=data[1][i].serviceName%></h2>
+                                <h3>$<%=data[1][i].cost%>.00</h3>
+                                <h4><%=data[1][i].terms%></h4>
                             </div>
                             <div class="imgCont">
                                    <a onclick="loading('getting product details')" href="/productID/<%= data[1][i]._id%>"> 
