--- a/views/services.ejs
+++ b/views/services.ejs
@@ -13,14 +13,17 @@
   <%- include('config/header.ejs')%>
   <div id="backgroundFX">      
       <h1 class="h1Span"> W2 SERVICES</h1>
-      <button onclick="switchView(pageGrid)">table</button>
-      <button onclick="switchView(pageCard)">card</button>
-      <button onclick="switchView(pageNav)">nav</button>
+      <button style="background-color:rgb(33, 133, 133)" onclick="switchView(pageGrid)">table</button>
+      <button style="background-color:rgb(33, 133, 133)" onclick="switchView(pageCard)">card</button>
+      <button hidden onclick="switchView(pageNav)">nav</button>
+      <a href="/accounts"><button>accounts</button></a>
+      <a href="/admin"><button>admin</button></a>
       <button onclick="switchView(pageAdd)">add</button>
-
+      <a href="/invoice"><button>invoice</button></a>
     <div id="pageCard" class="landingPage">
+    
     <%for(let i =0;i<data[0].length;i++){%>    
-      <div class="eventBody">
+     <a href="/editor/?_id=<%=data[0][i]._id%>&ext=<%=Object.values(ext)%>"> <div class="eventBody">
         <span class="alert"><h2> <%= data[0][i].serviceName%></h2></span><br>
        <p>       
          <h3>  <%= data[0][i].serviceCategory%><br></h3>
@@ -28,7 +31,7 @@
         </p>
         <h1 class="span"><%= data[0][i].cost%></h1><%= data[0][i].terms%><br>
               
-      </div>
+      </div></a>
       <%}%>
       
     </div>
@@ -50,7 +53,7 @@
         <br><br>
         
         <label for="cost">Cost:</label>
-        <input type="cost" id="cost" name="cost" required>
+        <input type="number" id="cost" name="cost" required>
         <br><br>
         
         <label for="terms">Terms:</label>
@@ -94,8 +97,8 @@
             <td><%=data[0][i].serviceCategory%></td>
             <td><%=data[0][i].serviceDetail%></td>
          
-            <td><a href="/editService/<%=data[0][i]._id%>"><span class="alert"> Edit</span></a></td>
-            <td><a href="/deleteService/<%=data[0][i]._id%>"><span class="alert"> Delete</span></a></td>
+            <td><a href="/editor/?_id=<%=data[0][i]._id%>&ext=_services"><span class="alert"> Edit</span></a></td>
+           
           </tr>
       <%}%>
           <!-- Add more rows as needed -->
