--- a/views/invoiceViewer.ejs
+++ b/views/invoiceViewer.ejs
@@ -41,6 +41,19 @@
   </div>
 
   </div>
+  <div class="eventBody">
+    <p><strong>Payment Policy Update:</strong> all invoices will be due 15 days after the invoice date. If payment is not received within 30 days of the invoice date, we will add a 1.5% late fee per 30 days to the outstanding balance.</p>
+    </div>
+    <div class="eventBody">
+    <p>We offer the following payment options:</p>
+    <ul>
+        <li>Mail by check: Payable to W2 Marketing LLC, c/o: Scott Wallace, Mail to: 1536 14th AVE ~ Greeley, CO 80631</li>
+        <li>Online payment: <a href="https://www.paypal.com"> paypal direct</a> to: w2marketing.scott@gmail.com</li>
+    </ul>
+    <p>if you have any questions abour invoicing, payment, or you may have seen a bug in this new service, all feedback helps, please let me know!! -scott</p>
+    <p>"version": "1.0.9"</p>
+</div>
+
      </div>   
          
   
