--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,22 +14,24 @@
                     <h1>about us</h1>
                   
 <div class="eventBody_about">
-    <div class="eventBody">
-            <p> <span class="alert"> W2 Marketing</span> operates as a small specialized team in Greeley, CO</p>
-   <p>We Offer:</p>
-              <ul>
-                <li>Social media account creation and management (Facebook, Instagram, Twitter, etc.)</li>
-                <li>Content creation and curation</li>
-                <li>Social media advertising (Facebook Ads, Instagram Ads, etc.)</li>
-                <li>Influencer marketing</li>
-                <li>Social media analytics and reporting</li>
-                <li>Community management and engagement</li>
-                <li>Reputation management</li>
-                <li>Social media strategy development</li>
-
-<p></p>
-</ul>
-            </div>
+    <div class="eventBody_about">
+        <div class="eventBody">
+                <p> <span class="alert"> NoCo Metalworkz</span> operates as a small specialized team in Greeley, CO</p>
+       <p>We Offer:</p>
+                  <ul>
+    <li>Advanced Fabrication</li>
+    <li>Fencing & Automatic Gates</li>
+    <li>Industrial Stairways & Catwalk Assembly</li>
+    <li>Automotive Parts & Accessories</li>
+    <li>Custom Onsite metalworkz</li>
+    <li>delivered machine parks & custom workz</li>
+    
+    <p></p>
+    </ul>
+                </div>
+                <div class="imgSubDiv">
+                    <img class="imgSub" src="/images/laser.png">
+                </div>
        
         </div>
             </div>
@@ -77,7 +79,7 @@
         <p>Browse anonimously or add to cart by <a href="/login">registering</a> your email with us</p>
         <p><a href="/register">Contact NoCo MetalWorkz</a>  about Estimates, Product Info, or a custom Design Idea</p>
         <p>Our website offers our guests to browse, save, and purchase custom parts and plasma cuts </p>
-        <h2>Noco Metalworkz Web Application is Developed and Hosted by:</h2> <a href=""><h2> W2 Marketing LLC ~ Greeley, CO</h2></a>
+        <h2>Noco Metalworkz Web Application is Developed and Hosted by:</h2> <a href="app.w2marketing.biz"><h2> W2 Marketing LLC ~ Greeley, CO</h2></a>
         <a href=""><h2>report app issues to developer</h2></a>
     </div>
     <br>
