--- a/views/config/footer.ejs
+++ b/views/config/footer.ejs
@@ -1,4 +1,4 @@
-<div class="footer" id="footer"><p>W2 Marketing LLC ~ Greeley, CO</p> 
+<div class="footer" id="footer"><p>Noco Metalworkz LLC ~ Greeley, CO</p> 
 
  
 </div>
