--- a/views/config/intro.ejs
+++ b/views/config/intro.ejs
@@ -1,8 +1,8 @@
 <div class="introImgDiv_T">    
         <img class="introImg_head" src="/images/logoW2.png">
-       <h1 class="introType">Marketing for your Small Business Social Media</h1>
-       <h2>We know what it is like starting your own business. We did it too!</h2>
-       <h2> We make it easy and affordable for you to take the first step into building your dreams and simplifying the most daunting part of getting your business out there for people to see. </h2>
+       <h2 class="introType">Northern Colorado's Welders and Workers</h2>
+      
+       <h2> On Site, Commission Plasma Cuts, Fencing , and More </h2>
 </div>
   
 <div class="landingPage">
