--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <%- include('config/intro.ejs')%> 
     <div class="eventBody">
        <div class="indexSpacer"></div>
-        <h1 class="h1Span">W2 Marketing Services</h1>
+        <h1 class="h1Span">Noco Metalworkz Services</h1>
       
         <div class="invGrid">
             <% for(var i=0;i<data[1].length;i++){%>
