--- a/views/invoiceViewer.ejs
+++ b/views/invoiceViewer.ejs
@@ -12,7 +12,7 @@
 
   <div id="backgroundFX">    
       
-      <h1 class="h1Span">W2 Marketing Invoice</h1>
+      <h1 class="h1Span">Noco Metalworkz Invoice</h1>
 
       <div class="eventBody">
         <h3>date: <%=new Date(data[2].date).toDateString()%><br></h3>
@@ -47,10 +47,10 @@
     <div class="eventBody">
     <p>We offer the following payment options:</p>
     <ul>
-        <li>Mail by check: Payable to W2 Marketing LLC, c/o: Scott Wallace, Mail to: 1536 14th AVE ~ Greeley, CO 80631</li>
-        <li>Online payment: <a href="https://www.paypal.com"> paypal direct</a> to: w2marketing.scott@gmail.com</li>
+
+        <li>Online payment: <a href="https://www.paypal.com"> paypal direct</a> to: noco_metalworkz@outlook.com</li>
     </ul>
-    <p>if you have any questions abour invoicing, payment, or you may have seen a bug in this new service, all feedback helps, please let me know!! -scott</p>
+
     <p>"version": "1.0.9"</p>
 </div>
 
