--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -45,6 +45,7 @@ $textAltColor:white;
   
   //***********************MAIN APP STYLES****************//
   body {
+    scroll-behavior: smooth;
     text-align: center;
     margin: 0;
     padding: 0;
@@ -71,10 +72,12 @@ $textAltColor:white;
      &_T{
        padding: 5%;
        margin: 0; 
-       width: 90%;
+      //  width: 90%;
+       height: 100vh;
        background-color: rgba(0, 0, 0, 0.81);
       @media (min-width:900px) {
-        width: 100%;
+       // width: 100%;
+       height: 100vh;
        // margin-left: 30%;
         padding: 0;
       }
@@ -90,7 +93,7 @@ $textAltColor:white;
         width: 26%;
        margin-top: 20%;
   @media (min-width:400px){margin-top:5%} 
-@media screen and(min-width:900px) {
+@media (min-width:900px) {
 //  width:40%;
  // margin-left:30%
 }}
@@ -383,7 +386,7 @@ input:focus{
 //main content boxing style
 .mainStyle{
 margin-bottom: 2%;
-  padding: 2%;
+  //padding: 2%;
   //background-color: $eventBodyColor;
   animation: .6s ease-in 1 slidein;
   scroll-behavior: smooth;
@@ -592,18 +595,22 @@ align-items: center;
 .menu{
   position: fixed;
   min-width: 100vw;
-  
-  top:0;
-  left: 0;
+  padding:2%;
+bottom:3%;
+  left: 12px;
   display: flex;
   background-image: url('');
   background-repeat: no-repeat;
  background-clip:unset;
-background-size: contain;
-  background-position-x: 85%;
-  background-color:$grey;
-  z-index: 50;
-  animation: logoMove 15s linear 0 infinite;
+background-size: 55px;
+background-position-x: 85%;
+// background-color:$grey;
+z-index: 50;
+animation: logoMove 15s linear 0 infinite;
+@media (min-width:768px){
+  
+  background-size: 100px;
+  }
   }
  
 select{
@@ -841,11 +848,13 @@ width: 100%;
 }
 .invImg{
 width: 100%;
-height: 250px;
 object-fit:cover;
 background-size: cover; 
 background-repeat: no-repeat;
-
+@media (max-width:768px){
+  height: 250px;
+    
+}
 
  }
 
@@ -923,6 +932,7 @@ min-height:54px;
 min-height: 8%;
 min-width: 49%;
 margin: 13%;
+padding:1%;
 background-color: $accent;
 border: $blue;
 transform-style: preserve-3d;
@@ -951,15 +961,123 @@ background-color: black;
 .menuContent{
   
   text-align: center;
-  margin:50% 41%;
+  margin:50% 30%;
  
   @media (min-width:730px) {
     
-    margin:18% 48%
+    margin:18% 30%
 
   }
 }
 #hmBot{
  // transform: rotateZ(-45deg) translateY(200%) translateX(15%);
 
+}
+
+.introDeetsHeader{
+min-height: 250px;
+border: 3px solid $blue;
+display: flex;
+align-items: center;
+align-content: center;
+@media (max-width:768px){
+display: block;
+    
+}
+
+
+
+}
+.introDeetsDiv{
+
+}
+.introDeetsGallery{
+display: grid;
+grid-template-columns: 1fr 5fr;
+
+}
+.introDetailsGallery{
+  width: 100%;
+  height:auto;
+  display: flex;
+  overflow-x: auto;
+}
+.introDescription{
+  padding:5%;
+  font-size: 2rem;
+  @media (max-width:768px){
+    padding:10%;
+    font-size: 1rem;
+
+  }
+}
+.galleryImage{
+  border-radius: 5px;
+  width:100%;
+  margin:2%;
+  box-shadow:8px 8px 2px rgba(0, 0, 0, 0.277);
+  transform-style: preserve-3d;
+  transition-duration: 1.2s;
+  transition-timing-function: ease-in-out;
+  @media (min-width:768px){
+    width:15%;
+
+  }
+}
+.galleryImagePop{
+  border-radius: 5px;
+  width:350%;
+  margin:2%;
+  box-shadow:8px 8px 2px rgba(0, 0, 0, 0.277);
+  transform-style: preserve-3d;
+  transition-duration: 1.2s;
+  transition-timing-function: ease-in-out;
+  @media (min-width:768px){
+    width:200%;
+flex-shrink: none;
+  }
+}
+
+.headNav{
+  display: grid;
+  grid-template-columns: 1fr 10fr;
+}
+.gallery-window {
+  position: fixed;
+  width: 78%;
+  top: 18%;
+  left: 8%;
+  //transform: translate(-50%, -50%);
+  background-color: #ffffffe6;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  z-index: 9999;
+  @media (min-width:768px){
+    width:55%;
+   
+    top: 5%;
+    left: 20%;
+  }
+}
+
+.gallery-content {
+  position: relative;
+  padding: 0px;
+}
+
+.close-button {
+  color: black;;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  
+
+  cursor: pointer;
+  font-size: 3rem;
+}
+.galleryGrid{
+  display: flex;
+  align-items: center;
+  align-content: center;
 }
