--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
   
       <%- include('config/bkgdImg.ejs')%>
       <%- include('config/loadScreen.ejs')%>
-    <%- include('config/header.ejs')%>
+    <%- include('config/header.ejs',{data:data})%>
     <%- include('config/bkgdImg.ejs')%>
     <div class="mainStyle">
       <div class="landingPage"> 
