--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -12,91 +12,42 @@
            
 <canvas id="bkgdCanvas"></canvas>  
 <div id="backgroundFX">
-    <%- include('config/header.ejs')%>  
+  
     <%- include('config/bkgdImg.ejs')%>
     <%- include('config/loadScreen.ejs')%>
 <div class="eventBody">
 <h1 class="h1Span"><%=title%></h1>
 </div>
+<%- include('./adminViews/adminNavButtons')%>
 <div class="mainStyle">
   <div class="landingPage">
+    
+    
+    
+    
+    <div id="introContent" class="adminSec"> <%- include('./adminViews/introContent')%></div>
+    
+    <!---->
+    
+    <!---->
+    
 
-    <div class="mainStyle">
-      <h1 class="h1Span">Post</h1>
-        <div class="eventBody" id="admin0">
-          <form action="/upload" enctype="multipart/form-data" method="post" >
-            <h2>Step 1: Add Details</h2>
-              <input placeholder="Event Title"  type="text" name="title">
-              <input placeholder="Date or Subtitle" type="text" name="subtitle">
-              <textarea placeholder="Event Details" type="text" name="details">
-               </textarea>
-            <h2 style="margin: 0;">Step 2: Attach One Image</h2> 
-              <input type="file" accept="image/*" name="photo">
-            <h2>Step 3: Submit</h2> 
-              <button onclick="loading('adding post to home page')" type="submit" >Submit</button>
-          </form>
-        </div>
-     </div>
-   
-<!---->
-<div class="mainStyle">
-  <h1 class="h1Span">Add Intro Content</h1>
-    <div class="eventBody" id="admin0">
-      <form action="/uploadIntro" enctype="multipart/form-data" method="post" >
-        <h2>Step 1: Add Details</h2>
-          <input placeholder="Event Title"  type="text" name="introHeader">
-          <input placeholder="Date or Subtitle" type="text" name="introDetails">
+    
+    
+  </div>
+  <div id="gallery" class="adminSec"> <%- include('./adminViews/gallery',{introContent:introContent})%></div>
+
+
+      
+  <!---->
   
-        <h2 style="margin: 0;">Step 2: Attach One Image</h2> 
-          <input type="file" accept="image/*" name="photo">
-        <h2>Step 3: Submit</h2> 
-          <button onclick="loading('adding post to home page')" type="submit" >Submit</button>
-      </form>
-    </div>
- </div>
-<!---->
-  <div class="mainStyle">
-      <h1 class="h1Span">Live Posts</h1>
-      <div class="eventBody" id="admin2">
-      <table>
-        <thead>
-      <th>Blog Title</th><th>Date or Subtitle</th><th>Remove</th>
-        </thead>
-        <tbody>
-          <%if(typeof blogs == 'object' && blogs[0]){%>
-          <% for(var i=0; i<blogs.length;i++){%>
-          <tr>
-              <td><%= blogs[i].bTitle %></td>
-              <td><%= blogs[i].bSubtitle%></td>
-              <td><img src="<%= blogs[i].imgName%>" alt=""></td>             
-              <td><form action="/delBlog" method="post">
-                  <button onclick="loading('deleting blog')" name="blogDelete" value="<%= blogs[i]._id%>"> delete</button>
-                   </form></td>
-           </tr>
-          <% } %>
-          <%}%>
-        </tbody>
-      </table>
-     </div>
-   </div>
+  <!--div class="evnetBody"><h1 class="h1Span"><a href="/options">Options</a></h1></div-->
+  <!--div class="evnetBody"><h1 class="h1Span"><a href="/services">Services</a></h1></div-->
+  <!--div class="evnetBody"><h1 class="h1Span"><a href="/accounts">Accounts</a></h1></div-->
+  
+  <%- include('./config/baseScripts.ejs')%>
+  
+  
+  <%- include('config/footer.ejs')%> 
 
-<div class="mainStyle">
-
-<!---->
-
-<div class="evnetBody"><h1 class="h1Span"><a href="/options">Options</a></h1></div>
-<div class="evnetBody"><h1 class="h1Span"><a href="/services">Services</a></h1></div>
-<div class="evnetBody"><h1 class="h1Span"><a href="/accounts">Accounts</a></h1></div>
-
-
-</div>
-
-
-</div>
-<%- include('./config/baseScripts.ejs')%>
- 
-
-<%- include('config/footer.ejs')%> 
-    </div>
-
-    </body> </html>
+</body> </html>
