--- a/views/config/header.ejs
+++ b/views/config/header.ejs
@@ -10,17 +10,15 @@
 
 <div id="menuPage">
     <div class="menuContent">
-        <p><a href="/">Home</a></p>
-        <p><a href="/market">Services</a></p>
+        <p><a href="/">Home</a></p>         
+        <%if (typeof data=='object'&&  data){%>
+        <%for(let i=0;i<data[2].length;i++){%>
+            <p><a href="/introDetails?id=<%=data[2][i]._id%>"> <%=data[2][i].introHeader%></a></p> 
+           
+            <%}%>
+            <%}%>
         <p><a href="/register">Contact</a></p>
-    <% if (typeof user == 'object' && user) { %>
-        <p> <a onclick="loading('logging out')" href="/auth/logout">Logout</a></p>
-        <div><img onclick="getCart()" class="cartIcon" src="/images/icons/cart.png"></div>
-        <%}else{%>
-            <p><a href="/login">Sign in</a></p>
-            <div><a href="/login"><img class="cartIcon" src="/images/icons/cart1.png"></a></div>
-    
-    <%}%>
+   
 
 </div>
 </div>
