--- a/public/stylesheets/sook/style.css
+++ b/public/stylesheets/sook/style.css
@@ -3,6 +3,13 @@ body {
   padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: linear-gradient(to right, rgba(255, 0, 0, 0.674), rgba(201, 235, 31, 0.733), rgba(30, 255, 0, 0.57), rgba(0, 183, 255, 0.857));
+  text-align: center;
+}
+
+.indexImg {
+  max-width: 25%;
+  margin-left: 50%;
+  transform: translateX(-100%);
 }
 
 /*# sourceMappingURL=style.css.map */
